fix gap on the form image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,7 +144,7 @@ body {
 .newsletter {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../../img/futurama-space.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   border-radius: 3px;
   padding: 2rem 2rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
