--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -50,7 +50,7 @@
 		transparent 50%),
 		url("../../img/futurama-space.jpg");
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 	border-radius: 3px;
 	padding: 2rem 2rem;
 	box-shadow: 0 1.5rem 4rem rgba($color-black, .40);
